--- a/Debora_OutSystem/angular.json
+++ b/Debora_OutSystem/angular.json
@@ -33,8 +33,10 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
-            
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap-grid.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+
             ],
             "scripts": []
           },
