--- a/Debora_OutSystem/package.json
+++ b/Debora_OutSystem/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.1",
     "firebase": "^10.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
